@@ -253,6 +253,9 @@ b6206090-b123-4776-bc2e-7e52af95206d share\gpa\gpa.png
 01020ce6-6c8c-460f-8f66-a8f734fa3fec share\gpa\gpa_logo.ppm
 fa992dcc-ff89-4a32-9723-0b76bbc1dae4 share\gpa\gpa_tips.de
 1e855765-7624-42bb-b06b-28a0bcfce29b share\gpa\gpa_tips.en
+592ab2a3-a681-4baf-80ff-9d8d9ea3ce95 share\gpg4win\durchblicker.pdf
+b1b23af2-9aa8-4055-9ff8-6e0d26c8dd0e share\gpg4win\einsteiger.pdf
+806964aa-cb2a-4d5e-b53c-9525736563f2 share\gpg4win\novices.pdf
 4ca6e2ae-6987-4a21-9268-dc652b709fe2 share\icons\oxygen\16x16\actions\1day.png
 f244617c-8b96-4f99-aa69-d73a41c287fd share\icons\oxygen\16x16\actions\5days.png
 d38f25e8-1245-4687-bf17-4e5be87a548a share\icons\oxygen\16x16\actions\7days.png
